add: filter, offset, column restriction system

--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "@loopback/rest": "^1.16.4",
     "@loopback/rest-explorer": "^1.2.6",
     "@loopback/service-proxy": "^1.2.6",
+    "@types/faker": "^4.1.5",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/shortid": "^0.0.29",
     "cookie": "^0.4.0",
+    "faker": "^4.1.0",
     "hasha": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "loopback-connector-mongodb": "^5.0.0",
